--- a/index.html
+++ b/index.html
@@ -123,7 +123,6 @@
     display: none;
     position: fixed;
     top: 50%; left: 50%;
-    transform: translate(-50%, -50%);
     width: min(600px, 90vw);
     max-height: 80vh;
     background: var(--mac-gray);
@@ -137,37 +136,37 @@
     font-family: 'Geneva', 'Charcoal', 'Chicago', 'Courier New', monospace;
     font-size: 12px;
     image-rendering: pixelated;
+    transform-origin: center center; /* overridden by JS at open time */
   }
   .mac-window.active {
     display: block;
-    animation: win-pixel-reveal 0.32s steps(1, end) forwards;
+    animation: win-open 0.55s steps(8, end) forwards;
   }
   .mac-window.closing {
     display: block;
-    animation: win-pixel-close 0.18s steps(1, end) forwards;
+    animation: win-close 0.3s steps(5, end) forwards;
   }
 
-  /* Pixelated open: expand from tiny in stepped jumps */
-  @keyframes win-pixel-reveal {
-    0%   { clip-path: inset(48% 48%); opacity: 0; }
-    10%  { clip-path: inset(44% 44%); opacity: 1; filter: brightness(2) saturate(0); }
-    20%  { clip-path: inset(38% 38%); filter: brightness(1.8) saturate(0); }
-    30%  { clip-path: inset(30% 30%); filter: brightness(1.4) saturate(0.2); }
-    42%  { clip-path: inset(20% 20%); filter: brightness(1.2) saturate(0.5); }
-    55%  { clip-path: inset(10% 10%); filter: brightness(1.05) saturate(0.8); }
-    68%  { clip-path: inset(4% 4%);   filter: brightness(1); }
-    80%  { clip-path: inset(1% 1%);   filter: brightness(1.05); }
-    90%  { clip-path: inset(0% 0%);   filter: brightness(0.95); }
-    100% { clip-path: inset(0% 0%);   filter: brightness(1); }
+  /* Zoom open: scales up from ~0 to full, stepped so it feels mechanical */
+  @keyframes win-open {
+    0%   { transform: translate(-50%, -50%) scale(0.04); opacity: 0;   filter: brightness(3) saturate(0); }
+    12%  { transform: translate(-50%, -50%) scale(0.12); opacity: 1;   filter: brightness(2.5) saturate(0); }
+    25%  { transform: translate(-50%, -50%) scale(0.28); opacity: 1;   filter: brightness(2) saturate(0.1); }
+    37%  { transform: translate(-50%, -50%) scale(0.48); opacity: 1;   filter: brightness(1.6) saturate(0.3); }
+    50%  { transform: translate(-50%, -50%) scale(0.66); opacity: 1;   filter: brightness(1.3) saturate(0.6); }
+    62%  { transform: translate(-50%, -50%) scale(0.80); opacity: 1;   filter: brightness(1.1) saturate(0.8); }
+    75%  { transform: translate(-50%, -50%) scale(0.92); opacity: 1;   filter: brightness(1.05); }
+    87%  { transform: translate(-50%, -50%) scale(1.03); opacity: 1;   filter: brightness(1); }
+    100% { transform: translate(-50%, -50%) scale(1.0);  opacity: 1;   filter: brightness(1); }
   }
 
-  /* Pixelated close: collapse inward */
-  @keyframes win-pixel-close {
-    0%   { clip-path: inset(0% 0%);   opacity: 1; }
-    30%  { clip-path: inset(10% 15%); opacity: 1; filter: brightness(1.3); }
-    60%  { clip-path: inset(30% 35%); opacity: 1; filter: brightness(1.8) saturate(0); }
-    90%  { clip-path: inset(47% 47%); opacity: 0.5; }
-    100% { clip-path: inset(50% 50%); opacity: 0; display: none; }
+  /* Zoom close: collapses back inward */
+  @keyframes win-close {
+    0%   { transform: translate(-50%, -50%) scale(1.0);  opacity: 1; filter: brightness(1); }
+    25%  { transform: translate(-50%, -50%) scale(0.7);  opacity: 1; filter: brightness(1.4) saturate(0.5); }
+    60%  { transform: translate(-50%, -50%) scale(0.25); opacity: 1; filter: brightness(2) saturate(0); }
+    90%  { transform: translate(-50%, -50%) scale(0.05); opacity: 0.3; }
+    100% { transform: translate(-50%, -50%) scale(0.0);  opacity: 0; }
   }
 
   /* Title bar */
@@ -580,61 +579,52 @@ function resizeCanvas() {
 resizeCanvas();
 window.addEventListener('resize', resizeCanvas);
 
-// Each sparkle is one pixel-diamond sprite that grows then fades
+// Each sparkle: exactly 3 sprite frames — small → full → small → gone
 class PixelDiamond {
   constructor(x, y, delay) {
     this.x = x;
     this.y = y;
-    this.delay = delay;         // stagger start
-    this.age = -delay;          // negative = waiting
-    this.duration = 28;         // frames to live
-    // Scatter slightly around center
-    this.ox = (Math.random() - 0.5) * 28;
-    this.oy = (Math.random() - 0.5) * 24;
-    // Drift upward slightly
-    this.vy = -0.4 - Math.random() * 0.4;
+    this.delay = delay;
+    this.age = -delay;
+    this.duration = 52;          // ~0.87s at 60fps — nice and slow
+    this.ox = (Math.random() - 0.5) * 18;
+    this.oy = (Math.random() - 0.5) * 14;
+    this.vy = -0.18 - Math.random() * 0.18; // gentle upward drift
     const colors = ['#ffffff', '#ffe87c', '#ffd700', '#fff0a0', '#c8f0ff', '#ffccff'];
     this.color = colors[Math.floor(Math.random() * colors.length)];
-    // Each diamond has a slightly different max size (2–5px pixel grid)
-    this.maxSize = Math.floor(Math.random() * 2 + 2); // 2, 3, or 4
+    this.maxSize = Math.floor(Math.random() * 2 + 2); // 2, 3, or 4px
   }
 
   done() { return this.age > this.duration; }
 
   draw(ctx) {
     this.age++;
-    if (this.age <= 0) return; // still waiting
+    if (this.age <= 0) return;
 
-    const t = this.age / this.duration; // 0 → 1
-    // grow fast (ease-out), then shrink at the end
-    const scale = t < 0.45
-      ? t / 0.45                        // grow 0→1 in first 45%
-      : 1 - ((t - 0.45) / 0.55);       // shrink 1→0 in last 55%
+    const t = this.age / this.duration;
 
-    const s = Math.max(1, Math.round(this.maxSize * scale));
-    const alpha = Math.min(1, scale * 1.4);
+    // Hard 3-frame stepped size (no smooth tween — stays pixel-art)
+    let s, alpha;
+    if      (t < 0.33) { s = Math.max(1, Math.round(this.maxSize * 0.5)); alpha = 1.0; }  // frame 1: small
+    else if (t < 0.66) { s = this.maxSize;                                  alpha = 1.0; }  // frame 2: full
+    else if (t < 0.83) { s = Math.max(1, Math.round(this.maxSize * 0.5)); alpha = 0.6; }  // frame 3: small+dim
+    else               { return; }                                                            // gone
 
-    // drift
     this.oy += this.vy;
-
     const px = Math.round(this.x + this.ox);
     const py = Math.round(this.y + this.oy);
 
     ctx.globalAlpha = alpha;
     ctx.fillStyle = this.color;
 
-    // Draw pixel diamond: cross shape
-    // center pixel
-    ctx.fillRect(px,         py,         s, s);
-    // arms — length grows with s
+    ctx.fillRect(px, py, s, s); // center pixel
     for (let i = 1; i <= s + 1; i++) {
       const arm = Math.max(1, s - Math.floor(i * 0.4));
-      ctx.fillRect(px + i * s,  py, arm, arm); // right
-      ctx.fillRect(px - i * s,  py, arm, arm); // left
-      ctx.fillRect(px, py - i * s,  arm, arm); // up
-      ctx.fillRect(px, py + i * s,  arm, arm); // down
+      ctx.fillRect(px + i * s, py, arm, arm);
+      ctx.fillRect(px - i * s, py, arm, arm);
+      ctx.fillRect(px, py - i * s, arm, arm);
+      ctx.fillRect(px, py + i * s, arm, arm);
     }
-
     ctx.globalAlpha = 1;
   }
 }
@@ -642,12 +632,10 @@ class PixelDiamond {
 function spawnBurstAt(el) {
   const rect = el.getBoundingClientRect();
   const cx = rect.left + rect.width / 2;
-  const cy = rect.top  + rect.height / 3; // aim toward top of object
-
-  // 3–4 diamonds, staggered start times
-  const count = 3 + Math.floor(Math.random() * 2); // 3 or 4
-  for (let i = 0; i < count; i++) {
-    sparkles.push(new PixelDiamond(cx, cy, i * 4));
+  const cy = rect.top  + rect.height / 3;
+  // Exactly 3 sparkles, staggered 10 frames apart (~0.16s each)
+  for (let i = 0; i < 3; i++) {
+    sparkles.push(new PixelDiamond(cx, cy, i * 10));
   }
 }
 
@@ -699,14 +687,41 @@ document.querySelectorAll('.hotspot').forEach(hotspot => {
 // ════════════════════════════════════════
 const overlay = document.getElementById('overlay');
 
+// Track the last click position so windows zoom from there
+let lastClickX = window.innerWidth / 2;
+let lastClickY = window.innerHeight / 2;
+document.addEventListener('click', e => {
+  lastClickX = e.clientX;
+  lastClickY = e.clientY;
+});
+
 function openWindow(id) {
   const win = document.getElementById('window-' + id);
   if (!win) return;
-  // Close any open windows instantly first
-  document.querySelectorAll('.mac-window.active').forEach(w => {
-    w.classList.remove('active');
+
+  // Close any already-open windows first
+  document.querySelectorAll('.mac-window.active, .mac-window.closing').forEach(w => {
+    w.classList.remove('active', 'closing');
+    w.style.display = 'none';
   });
+
+  // Set the transform-origin to the click point, expressed relative to the
+  // window's final centered position — so the zoom appears to originate
+  // from where the user clicked on the desk object
+  const winW = Math.min(600, window.innerWidth * 0.9);
+  const winH = Math.min(win.scrollHeight || 400, window.innerHeight * 0.8);
+  const winLeft  = (window.innerWidth  - winW) / 2;
+  const winTop   = (window.innerHeight - winH) / 2;
+
+  // origin relative to the window element itself
+  const ox = lastClickX - winLeft;
+  const oy = lastClickY - winTop;
+  win.style.transformOrigin = `${ox}px ${oy}px`;
+
   win.classList.remove('closing');
+  win.style.display = '';
+  // Force reflow so animation triggers fresh
+  void win.offsetWidth;
   win.classList.add('active');
   overlay.classList.add('active');
 }
@@ -717,8 +732,7 @@ function closeWindow(id) {
   win.classList.remove('active');
   win.classList.add('closing');
   overlay.classList.remove('active');
-  // Remove closing class after animation completes
-  setTimeout(() => win.classList.remove('closing'), 200);
+  setTimeout(() => { win.classList.remove('closing'); win.style.display = 'none'; }, 320);
 }
 
 // Close buttons
