--- a/index.html
+++ b/index.html
@@ -71,17 +71,29 @@
     pointer-events: none;
   }
 
-  /* ── CUSTOM CURSOR (KQ pointing hand) ── */
+  /* ── CUSTOM CURSOR (pixelated hand PNG) ── */
   #cursor {
     position: fixed;
-    width: 32px; height: 44px;
+    width: 36px; height: 36px;
     pointer-events: none;
     z-index: 99999;
-    transform: translate(-4px, -4px);
-    transition: transform 0.05s;
+    transform: translate(-10px, -4px);
+    image-rendering: pixelated;
+    image-rendering: crisp-edges;
   }
-  #cursor svg { width: 100%; height: 100%; }
-  #cursor.pointing { transform: translate(-4px, -4px) scale(1.1); }
+  #cursor img {
+    width: 100%; height: 100%;
+    image-rendering: pixelated;
+    image-rendering: crisp-edges;
+    display: block;
+  }
+  #cursor.pointing { transform: translate(-10px, -4px) scale(1.1); }
+  /* Hide custom cursor on touch devices */
+  @media (hover: none), (pointer: coarse) {
+    #cursor { display: none !important; }
+    body { cursor: auto !important; }
+    .hotspot { cursor: pointer !important; }
+  }
 
   /* ── HOTSPOTS ── */
   .hotspot {
@@ -140,33 +152,49 @@
   }
   .mac-window.active {
     display: block;
-    animation: win-open 0.55s steps(8, end) forwards;
+    animation: win-open 0.72s steps(7, end) forwards;
   }
   .mac-window.closing {
     display: block;
-    animation: win-close 0.3s steps(5, end) forwards;
+    animation: win-close 0.36s steps(4, end) forwards;
   }
 
-  /* Zoom open: scales up from ~0 to full, stepped so it feels mechanical */
+  /* Lo-fi open: choppy steps, window snaps between sizes like a bad frame rate */
   @keyframes win-open {
-    0%   { transform: translate(-50%, -50%) scale(0.04); opacity: 0;   filter: brightness(3) saturate(0); }
-    12%  { transform: translate(-50%, -50%) scale(0.12); opacity: 1;   filter: brightness(2.5) saturate(0); }
-    25%  { transform: translate(-50%, -50%) scale(0.28); opacity: 1;   filter: brightness(2) saturate(0.1); }
-    37%  { transform: translate(-50%, -50%) scale(0.48); opacity: 1;   filter: brightness(1.6) saturate(0.3); }
-    50%  { transform: translate(-50%, -50%) scale(0.66); opacity: 1;   filter: brightness(1.3) saturate(0.6); }
-    62%  { transform: translate(-50%, -50%) scale(0.80); opacity: 1;   filter: brightness(1.1) saturate(0.8); }
-    75%  { transform: translate(-50%, -50%) scale(0.92); opacity: 1;   filter: brightness(1.05); }
-    87%  { transform: translate(-50%, -50%) scale(1.03); opacity: 1;   filter: brightness(1); }
-    100% { transform: translate(-50%, -50%) scale(1.0);  opacity: 1;   filter: brightness(1); }
+    0%   { transform: var(--win-translate) scale(0.04); opacity: 0.9; filter: brightness(4) saturate(0) blur(1px); }
+    14%  { transform: var(--win-translate) scale(0.15); opacity: 1;   filter: brightness(3) saturate(0); }
+    28%  { transform: var(--win-translate) scale(0.15); opacity: 0.7; filter: brightness(2.5) saturate(0); }
+    42%  { transform: var(--win-translate) scale(0.38); opacity: 1;   filter: brightness(2) saturate(0.2); }
+    56%  { transform: var(--win-translate) scale(0.38); opacity: 0.6; filter: brightness(1.6) saturate(0.4); }
+    70%  { transform: var(--win-translate) scale(0.72); opacity: 1;   filter: brightness(1.2) saturate(0.7); }
+    84%  { transform: var(--win-translate) scale(0.72); opacity: 0.8; filter: brightness(1.1); }
+    100% { transform: var(--win-translate) scale(1.0);  opacity: 1;   filter: brightness(1); }
   }
 
-  /* Zoom close: collapses back inward */
+  /* Lo-fi close: snaps back in big jumps */
   @keyframes win-close {
-    0%   { transform: translate(-50%, -50%) scale(1.0);  opacity: 1; filter: brightness(1); }
-    25%  { transform: translate(-50%, -50%) scale(0.7);  opacity: 1; filter: brightness(1.4) saturate(0.5); }
-    60%  { transform: translate(-50%, -50%) scale(0.25); opacity: 1; filter: brightness(2) saturate(0); }
-    90%  { transform: translate(-50%, -50%) scale(0.05); opacity: 0.3; }
-    100% { transform: translate(-50%, -50%) scale(0.0);  opacity: 0; }
+    0%   { transform: var(--win-translate) scale(1.0);  opacity: 1;   filter: brightness(1); }
+    30%  { transform: var(--win-translate) scale(0.55); opacity: 1;   filter: brightness(1.8) saturate(0.3); }
+    60%  { transform: var(--win-translate) scale(0.55); opacity: 0.5; filter: brightness(2.5) saturate(0); }
+    85%  { transform: var(--win-translate) scale(0.08); opacity: 0.8; filter: brightness(3) saturate(0); }
+    100% { transform: var(--win-translate) scale(0.0);  opacity: 0; }
+  }
+
+  /* Echo ghost — faint afterimage that trails behind the opening window */
+  .mac-window-echo {
+    position: fixed;
+    pointer-events: none;
+    z-index: 999;
+    background: var(--mac-gray);
+    border: 2px solid var(--mac-black);
+    width: min(600px, 90vw);
+    image-rendering: pixelated;
+  }
+  @keyframes win-echo {
+    0%   { transform: var(--win-translate) scale(0.04); opacity: 0.5; filter: brightness(3) saturate(0); }
+    40%  { transform: var(--win-translate) scale(0.28); opacity: 0.3; filter: brightness(2); }
+    70%  { transform: var(--win-translate) scale(0.55); opacity: 0.15;}
+    100% { transform: var(--win-translate) scale(0.90); opacity: 0;  }
   }
 
   /* Title bar */
@@ -335,30 +363,7 @@
 </div>
 
 <!-- CUSTOM CURSOR -->
-<div id="cursor">
-  <svg viewBox="0 0 32 44" xmlns="http://www.w3.org/2000/svg">
-    <!-- KQ-style pointing hand cursor -->
-    <g fill="#f5c87a" stroke="#2a1a00" stroke-width="1.2">
-      <!-- Palm -->
-      <rect x="8" y="20" width="18" height="18" rx="2"/>
-      <!-- Index finger pointing up -->
-      <rect x="13" y="4" width="6" height="20" rx="3"/>
-      <!-- Middle finger -->
-      <rect x="19" y="10" width="5" height="14" rx="2.5"/>
-      <!-- Ring finger -->
-      <rect x="8" y="12" width="5" height="12" rx="2.5"/>
-      <!-- Pinky -->
-      <rect x="3" y="16" width="5" height="10" rx="2.5"/>
-      <!-- Thumb -->
-      <rect x="23" y="22" width="5" height="8" rx="2.5"/>
-      <!-- Fingernail on index -->
-      <rect x="14" y="4" width="4" height="5" rx="2" fill="#f0d9a0"/>
-      <!-- Knuckle lines -->
-      <line x1="9" y1="24" x2="25" y2="24" stroke="#c8a060" stroke-width="0.8"/>
-      <line x1="9" y1="28" x2="25" y2="28" stroke="#c8a060" stroke-width="0.8"/>
-    </g>
-  </svg>
-</div>
+<div id="cursor"><img src="cursor.png" alt=""></div>
 
 <!-- HOVER TOOLTIP -->
 <div id="hover-label"></div>
@@ -678,7 +683,7 @@ document.querySelectorAll('.hotspot').forEach(hotspot => {
 
   hotspot.addEventListener('click', () => {
     const projectId = hotspot.dataset.project;
-    openWindow(projectId);
+    openWindow(projectId, hotspot);
   });
 });
 
@@ -687,15 +692,7 @@ document.querySelectorAll('.hotspot').forEach(hotspot => {
 // ════════════════════════════════════════
 const overlay = document.getElementById('overlay');
 
-// Track the last click position so windows zoom from there
-let lastClickX = window.innerWidth / 2;
-let lastClickY = window.innerHeight / 2;
-document.addEventListener('click', e => {
-  lastClickX = e.clientX;
-  lastClickY = e.clientY;
-});
-
-function openWindow(id) {
+function openWindow(id, originEl) {
   const win = document.getElementById('window-' + id);
   if (!win) return;
 
@@ -704,24 +701,53 @@ function openWindow(id) {
     w.classList.remove('active', 'closing');
     w.style.display = 'none';
   });
+  // Remove any lingering echo ghosts
+  document.querySelectorAll('.mac-window-echo').forEach(e => e.remove());
 
-  // Set the transform-origin to the click point, expressed relative to the
-  // window's final centered position — so the zoom appears to originate
-  // from where the user clicked on the desk object
-  const winW = Math.min(600, window.innerWidth * 0.9);
-  const winH = Math.min(win.scrollHeight || 400, window.innerHeight * 0.8);
-  const winLeft  = (window.innerWidth  - winW) / 2;
-  const winTop   = (window.innerHeight - winH) / 2;
+  // ── COMPUTE ORIGIN ──
+  // The window is centered via translate(-50%,-50%) from top:50% left:50%.
+  // We need transform-origin expressed in px relative to the window element,
+  // pointing at the center of the clicked hotspot.
+  let originX = '50%', originY = '50%'; // fallback: screen center
 
-  // origin relative to the window element itself
-  const ox = lastClickX - winLeft;
-  const oy = lastClickY - winTop;
-  win.style.transformOrigin = `${ox}px ${oy}px`;
+  if (originEl) {
+    const rect = originEl.getBoundingClientRect();
+    const hotCX = rect.left + rect.width  / 2; // hotspot center in viewport px
+    const hotCY = rect.top  + rect.height / 2;
+
+    // Window's final rendered size & position
+    const winW = Math.min(600, window.innerWidth  * 0.9);
+    // Height unknown until rendered — use a reasonable estimate
+    const winH = Math.min(500, window.innerHeight * 0.8);
+    const winLeft = (window.innerWidth  - winW) / 2;
+    const winTop  = (window.innerHeight - winH) / 2;
+
+    // Transform-origin in window-local coords
+    originX = (hotCX - winLeft) + 'px';
+    originY = (hotCY - winTop)  + 'px';
+  }
+
+  win.style.transformOrigin = `${originX} ${originY}`;
+  // Also store as CSS var so keyframes can reference translate separately
+  win.style.setProperty('--win-translate', 'translate(-50%, -50%)');
+
+  // ── ECHO GHOST ── faint afterimage that lags behind the opening window
+  const echo = document.createElement('div');
+  echo.className = 'mac-window-echo';
+  echo.style.top  = '50%';
+  echo.style.left = '50%';
+  echo.style.maxHeight = '80vh';
+  echo.style.transformOrigin = `${originX} ${originY}`;
+  echo.style.setProperty('--win-translate', 'translate(-50%, -50%)');
+  echo.style.animation = 'win-echo 0.72s steps(7, end) forwards';
+  // Echo is just a blank shell — same size, no content
+  echo.style.height = win.offsetHeight ? win.offsetHeight + 'px' : '400px';
+  document.body.appendChild(echo);
+  setTimeout(() => echo.remove(), 750);
 
   win.classList.remove('closing');
   win.style.display = '';
-  // Force reflow so animation triggers fresh
-  void win.offsetWidth;
+  void win.offsetWidth; // force reflow
   win.classList.add('active');
   overlay.classList.add('active');
 }
@@ -732,7 +758,7 @@ function closeWindow(id) {
   win.classList.remove('active');
   win.classList.add('closing');
   overlay.classList.remove('active');
-  setTimeout(() => { win.classList.remove('closing'); win.style.display = 'none'; }, 320);
+  setTimeout(() => { win.classList.remove('closing'); win.style.display = 'none'; }, 400);
 }
 
 // Close buttons
@@ -876,7 +902,7 @@ function buildProjectFromConfig(project) {
     hoverLabel.style.display = 'none';
     hotspot.classList.remove('hovered');
   });
-  hotspot.addEventListener('click', () => openWindow(project.id));
+  hotspot.addEventListener('click', () => openWindow(project.id, hotspot));
 
   win.querySelector('.mac-close-btn').addEventListener('click', () => closeWindow(project.id));
 
